# proxmox-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.sh
docs/: api_manifest.md  architecture.md  requirements.md
scripts/: admin_dashboard.py  test_connection.py
src/proxmox_mcp/: __main__.py  config.py  models.py  server.py
src/proxmox_mcp/api/: client.py  permissions.py
src/proxmox_mcp/core/: logger.py  safety.py  sanitization.py
src/proxmox_mcp/tools/: __init__.py  cloudinit.py  discovery.py  exec.py  lifecycle.py  metrics.py  snapshots.py
tests/: conftest.py  test_client.py  test_logger.py  test_models.py  test_permissions.py  test_safety.py  test_safety_checked_decorator.py  test_safety_policy_loading.py  test_sanitization.py  test_tools.py
